--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ inputs:
   GH_TOKEN:
     description: 'GitHub access token with Repo scope'
     required: true
-    default: ${{ secrets.GH_TOKEN }}
+    default: ${{ github.token }}
 
   WAKATIME_API_KEY:
     description: 'Your Wakatime API Key'
